// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Ul tag with core props 1`] = `
.c0 {
  font-weight: 400;
  width: 100%;
  color: #333;
  margin: 0 0 10px;
  padding: 10px;
  font-size: 25px;
  line-height: 30px;
}

.c0 li p {
  margin: 0;
}

<ul
  class="c0"
  color="#333"
  data-testid="test-list"
  font-size="25px"
>
  <li>
    1 - Lorem ipsum
  </li>
  <li>
    2 - Lorem ipsum
  </li>
  <li>
    3 - Lorem ipsum
  </li>
</ul>
`;

exports[`Render Ul tag with fluid type props 1`] = `
.c0 {
  font-weight: 400;
  width: 100%;
  color: #333333;
  margin: 0 0 20px;
  padding: 0 0 0 25px;
  font-size: 10px;
  line-height: 18px;
}

.c0 li p {
  margin: 0;
}

@media screen and (min-width:400px) {
  .c0 {
    font-size: calc(10px + (18 - 10) * (100vw - 400px) / (1200 - 400));
    line-height: calc(18px + (26 - 18) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    font-size: 18px;
    line-height: 26px;
  }
}

<ul
  class="c0"
  color=""
  data-testid="test-list"
  font-size=""
>
  <li>
    1 - Lorem ipsum
  </li>
  <li>
    2 - Lorem ipsum
  </li>
  <li>
    3 - Lorem ipsum
  </li>
</ul>
`;

exports[`Render default Ul tag and styles 1`] = `
.c0 {
  font-weight: 400;
  width: 100%;
  color: #333333;
  margin: 0 0 20px;
  padding: 0 0 0 25px;
  font-size: 14px;
  line-height: 17px;
}

.c0 li p {
  margin: 0;
}

@media screen and (min-width:400px) {
  .c0 {
    font-size: calc(14px + (17 - 14) * (100vw - 400px) / (1200 - 400));
    line-height: calc(17px + (29 - 17) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    font-size: 17px;
    line-height: 29px;
  }
}

<ul
  class="c0"
  color=""
  data-testid="test-list"
  font-size=""
>
  <li>
    1 - Lorem ipsum
  </li>
  <li>
    2 - Lorem ipsum
  </li>
  <li>
    3 - Lorem ipsum
  </li>
</ul>
`;
